--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "lint-staged": "^15.3.0"
+  },
+  "lint-staged": {
+    "**/apps/android-app/**/*.java": "npm run lint:android",
+    "**/apps/api/**/*.{js,ts,json}": "npm run lint:api"
   }
 }
