--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint-staged": "^15.3.0"
   },
   "lint-staged": {
-    "**/apps/android-app/**/*.java": "npm run lint:android",
-    "**/apps/api/**/*.{js,ts,json}": "npm run lint:api"
+    "**/apps/android-app/**/*.java": "sh -c 'cd apps/android-app && ./gradlew lint'",
+    "**/apps/api/**/*.{js,ts,json}": "sh -c 'cd apps/api && pnpm run lint'"
   }
 }
