--- a/apps/android-app/app/src/main/AndroidManifest.xml
+++ b/apps/android-app/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.EduClass"
         tools:targetApi="31">
         <activity
+            android:name=".ui.signup.SignUpActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.signin.SignInActivity"
             android:exported="true" />
         <activity
