--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@nestjs/apollo": "^12.2.2",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^6.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "graphql": "^16.10.0",
