--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -22,10 +22,28 @@ services:
     networks:
       - backend_network
 
+  minio:
+    image: minio/minio
+    container_name: minio_storage
+    restart: unless-stopped
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+    networks:
+      - backend_network
+
 networks:
   backend_network:
     driver: bridge
 
 volumes:
   postgres_data:
+    driver: local
+  minio_data:
     driver: local
