--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,5 +1,22 @@
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=db_user_3847
-POSTGRES_PASSWORD=Strong_password_92j4kL!
-POSTGRES_DB=educlass
+POSTGRES_USER=POSTGRES_USER
+POSTGRES_PASSWORD=POSTGRES_PASSWORD
+POSTGRES_DB=POSTGRES_DB
+
+SMTP_HOST=localhost # Maildev SMTP server host (localhost)
+SMTP_PORT=1025      # Maildev default SMTP port
+SMTP_SECURE=false   # Maildev doesn't use SSL/TLS
+SMTP_USER=          # No user required for Maildev
+SMTP_PASS=          # No password required for Maildev
+SMTP_NAME=EduClass  # From name in the email
+
+MINIO_ROOT_USER=minio_user_3847
+MINIO_ROOT_PASSWORD=S3cr3t_password_92j4kL!
+
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_BUCKET=educlass
+MINIO_SECURE=false
+MINIO_ACCESS_KEY=raxGW864uXIB1Us0XkQ6
+MINIO_SECRET_KEY=2SYw2iOApIUpjilwryG2yZkphbcgII8CPs4aTcKt
