--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.10.0",
     "handlebars": "^4.7.8",
+    "minio": "^8.0.4",
     "nestjs-minio": "^2.6.2",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
