--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "cache-manager": "^6.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "graphql": "^16.10.0",
     "graphql-upload-ts": "^2.1.2",
     "handlebars": "^4.7.8",
