--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "graphql": "^16.10.0",
     "graphql-upload-ts": "^2.1.2",
     "handlebars": "^4.7.8",
+    "lodash": "^4.17.21",
     "minio": "^8.0.4",
     "nestjs-minio": "^2.6.2",
     "nodemailer": "^6.9.16",
@@ -60,6 +61,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
