--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,15 +1,31 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=POSTGRES_USER
-POSTGRES_PASSWORD=POSTGRES_PASSWORD
-POSTGRES_DB=POSTGRES_DB
+APP_PORT=3000
+APP_NAME=EduClass
 
-SMTP_HOST=localhost # Maildev SMTP server host (localhost)
-SMTP_PORT=1025      # Maildev default SMTP port
-SMTP_SECURE=false   # Maildev doesn't use SSL/TLS
-SMTP_USER=          # No user required for Maildev
-SMTP_PASS=          # No password required for Maildev
-SMTP_NAME=EduClass  # From name in the email
+BACKEND_DOMAIN=http://localhost
+
+MAIL_PORT=1025
+MAIL_HOST=127.0.0.1
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_DEFAULT_EMAIL=no-reply@educlass.com
+MAIL_DEFAULT_NAME=EduClass
+MAIL_IGNORE_TLS=true
+MAIL_SECURE=false
+MAIL_REQUIRE_TLS=false
+
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_USER=db_user_3847
+DATABASE_PASSWORD=Strong_password_92j4kL!
+DATABASE_NAME=educlass
+DATABASE_LOGGING=true
+DATABASE_SYNCHRONIZE=true
+
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
+POSTGRES_USER=db_user_3847
+POSTGRES_PASSWORD=Strong_password_92j4kL!
+POSTGRES_DB=educlass
 
 MINIO_ROOT_USER=minio_user_3847
 MINIO_ROOT_PASSWORD=S3cr3t_password_92j4kL!
