chore: add pnpm onlyBuiltDependencies to api package.json

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -98,5 +98,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@apollo/protobufjs",
+      "@nestjs/core"
+    ]
   }
 }
