chore: add graphql-relay and nestjs-graphql-relay

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,10 +40,12 @@
     "class-validator": "^0.14.1",
     "crypto": "^1.0.1",
     "graphql": "^16.10.0",
+    "graphql-relay": "^0.10.2",
     "graphql-upload-ts": "^2.1.2",
     "handlebars": "^4.7.8",
     "lodash": "^4.17.21",
     "minio": "^8.0.4",
+    "nestjs-graphql-relay": "^10.6.0",
     "nestjs-minio": "^2.6.2",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
