--- a/apps/android-app/app/src/main/AndroidManifest.xml
+++ b/apps/android-app/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.EduClass"
         tools:targetApi="31">
         <activity
+            android:name=".ui.course.CourseActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.verification.EmailVerificationActivity"
             android:exported="false" />
         <activity
